Filters: Fixed filters alignment in responsive view

--- a/app/assets/stylesheets/filters.scss
+++ b/app/assets/stylesheets/filters.scss
@@ -60,6 +60,7 @@
 
     .range_selector.noUi-target.noUi-ltr.noUi-horizontal.noUi-background { margin-top: 5px; }
   }
+  .no-ui-slider { margin-top: 20px; }
   .filter-footer {
     float: right;
     margin-top: 20px;
