--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4467,9 +4467,6 @@ i.material-icons.close:hover {
 }
 .pagination span:hover a { color: white; }
 .paginate-info { margin-top: 30px; }
-#bulk_action_form .search_result_container{
-  margin-right: 10px !important;
-}
 #main-content .breadcrum-bar.card-white-panel.clearfix .input-field .select-wrapper.initialized input.select-dropdown {
   padding-left: 5px;
 }
